@@ -1,0 +1,49 @@
+<printer id="printer/HP-Color_LaserJet_2605dn">
+  <make>HP</make>
+  <model>Color LaserJet 2605dn</model>
+  <mechanism>
+    <laser />
+    <color />
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://www.hp.com/</url>
+  <lang>
+    <postscript level="3" />
+    <pcl level="6" />
+    <pjl />
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+    <general>
+      <commandset>JL,PML,POSTSCRIPT,PCLXL,PCL</commandset>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>HP Color LaserJet 2605dn</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>hplip</driver>
+  <drivers>
+    <driver>
+      <id>hplip</id>
+    </driver>
+  </drivers>
+  <comments>
+    <en>
+
+    For basic printing functionality use the Postscript PPD. For advanced functionality such
+    as printer status and maintenance features, use the
+    &lt;a href=&quot;http://hplipopensource.com/&quot;&gt;
+    HPLIP driver&lt;/a&gt; (which includes HPIJS). &lt;p&gt;&lt;p&gt;
+
+      Consumables/Refills: 1 toner cartridge for each color, imaging drum&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
