@@ -1,3 +1,8 @@
+2010-04-26  Tim Waugh <twaugh@redhat.com>
+
+	* db/source/printer/HP-Color_LaserJet_2605dn.xml: Added from
+	  2605 template, with correct IEEE 1284 Device ID (bug #583909).
+
 2010-04-16  Tim Waugh <twaugh@redhat.com>
 
 	* db/source/printer/Canon-BJC-4100.xml: Added IEEE 1284 Device
